fix(header): add bottom padding to no-children to align with the rest

--- a/components/header/src/Header.module.scss
+++ b/components/header/src/Header.module.scss
@@ -91,6 +91,12 @@ $chevron-margin-left-lg: 3px;
       &--no-children {
         display: flex;
         align-items: center;
+
+        :global {
+          .MuiTab-wrapper {
+            padding-bottom: $chevron-width;
+          }
+        }
       }
 
       &--selected {
